# mnist-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: digitRecognition.h
include/armadillo_bits/: config.hpp
mnist_data/: theta1.csv  theta2.csv  train_x_100.csv  train_y_100.csv  train_y_4000.csv
src/: digitRecognition.cpp  main.cpp
